1.04 (10/01/2014)

1.  Implemented alpha-beta pruning.
2.  Review pointers before accessing contents.
3.  Upgraded Qt to version 5.3.1 on Windows.

1.03 (05/03/2014)

1.  Must initialize the size variable in maxit.cc.

1.02 (04/30/2014)

1.  Absorb memory failures.
2.  Qt has been upgraded to version 4.8.6 on OS X and 5.2.1 on Windows.
3.  Replaced O3 with Os, that is, optimize for size.